--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -268,6 +268,9 @@ DMNDocumentationI18n.Name=Name Attachment
 DMNDocumentationI18n.URL=URL
 DMNDocumentationI18n.NamePlaceholder=Enter
 DMNDocumentationI18n.URLPlaceholder=https://
+DMNDocumentationI18n.Ok=OK
+DMNDocumentationI18n.Cancel=Cancel
+DMNDocumentationI18n.AttachmentTip=.pdf, .doc, .jpeg, .xls
 DMNDocumentationFactory.NoFileName=No file name
 DMNDocumentationFactory.Constraints=Constraints:
 DMNDocumentationFactory.ListYes=List: Yes
