bugfix after review

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
@@ -619,6 +619,10 @@ notification.add=Add
 notification.save=Save
 notification.delete=Delete
 
+notification.expiration.expression.label=Expression
+notification.expiration.datatime.label=Data/time
+notification.expiration.timeperiod.label=Time period
+
 
 reassignment.label=Reassignment
 reassignments.label=Reassignment
