--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
@@ -25,6 +25,6 @@ MarshallingMessage.sequenceFlowIgnored=Sequence flow was ignored. Source: {0}, T
 MarshallingMessage.collapsedElementExpanded=Collapsed element {0} of type {1} was expanded
 MarshallingMessage.ignoredElement=Element {0} of type {1} was ignored
 MarshallingMessage.ignoredUnknownElement=Unknown element {0} was ignored
-MarshallingMessage.childLaneSetConverted=Child Lane Set {0} was converted to Lane
+MarshallingMessage.childLaneSetConverted=Child Lane Set {0} was converted to Lane {1}
 MarshallingMessage.convertedElement=Element {0} of type {1} was converted to {2}
 MarshallingMessage.elementFailure=Failure on element {0} of type {1}
