--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
@@ -72,6 +72,7 @@ GuidedDecisionTree=Guided Decision Tree Editor
 GuidedScoreCard=Guided Score Card Editor
 XLSScoreCard=XLS Score Card Editor
 StunnerDesigner=(New) jBPM Designer Editor
+LegacyDesigner=(Legacy) jBPM Designer Editor
 SSHKeys=SSH Keys
 StunnerDesignerPreferences=Process Designer
 SessionTimeout=Session timeout
