additional ISO8601 patterns

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
@@ -620,7 +620,7 @@ notification.save=Save
 notification.delete=Delete
 
 notification.expiration.expression.label=Expression
-notification.expiration.datatime.label=Data/time
+notification.expiration.datetime.label=Date/time
 notification.expiration.timeperiod.label=Time period
 
 
