JBPM-8292: SLA due date property is missing check formatting

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
@@ -504,6 +504,16 @@ TimerSettingsFieldEditorView.DateTimer_Help_Header=The timer date must be
 TimerSettingsFieldEditorView.DateTimer_Help_Line1=a valid ISO-8601 date time e.g. 2017-12-24T20:15:00+02:00
 
 #######################
+# SLASettingsFieldType
+#######################
+SLASettingsFieldEditorView.TimeDuration=SLA
+SLASettingsFieldEditorView.TimeDuration_Placeholder=duration value or an expression #{expression}
+SLASettingsFieldEditorView.DurationTimer_Help_Header=The SLA timer duration must be
+SLASettingsFieldEditorView.DurationTimer_Help_Line_1=an ISO-8601 duration in the format "PnDTnHnMnS", e.g.  P2DT1H, PT1H15M
+
+SLASettingsFieldEditorView.Expression_Help_Line=an expression like #{expression}, e.g. #{my_process_variable}
+
+#######################
 # ConditionEditor
 #######################
 KieFunctions.between=Between
