--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/resources/org/kie/workbench/common/stunner/kogito/client/resources/i18n/KogitoClientConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/resources/org/kie/workbench/common/stunner/kogito/client/resources/i18n/KogitoClientConstants.properties
@@ -18,7 +18,7 @@ org.kie.workbench.common.stunner.submarine.client.editor.ConfirmAction=Confirm a
 org.kie.workbench.common.stunner.submarine.client.editor.OnErrorConfirmUndoLastAction=An error happened [{0}]. Do you want to undo the last action?
 org.kie.workbench.common.stunner.submarine.client.editor.DiagramSaveSuccessful=Diagram saved successfully
 org.kie.workbench.common.stunner.submarine.client.editor.DiagramEditorDefaultTitle=Project Diagram Editor
-org.kie.workbench.common.stunner.submarine.client.editor.DiagramParsingError=An error was produced during process diagram parsing. There might be bpm nodes not yet supported by current Process Designer version, or the xml content can contain errors. You can try to open the file with the Legacy Process Designer or repair it manually. {0}
+org.kie.workbench.common.stunner.submarine.client.editor.DiagramParsingError=An error occurred parsing the diagram. There might be nodes not yet supported by the editor or the XML content can contain errors. You can try to repair it manually. {0}
 org.kie.workbench.common.stunner.submarine.client.editor.Documentation=Documentation
 org.kie.workbench.common.stunner.submarine.client.editor.Print=Print
 
