renaming submarine to kogito on files, properties, attributes...

--- a/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/resources/org/kie/workbench/common/stunner/kogito/client/resources/i18n/KogitoClientConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-extensions/kie-wb-common-stunner-kogito/kie-wb-common-stunner-kogito-client/src/main/resources/org/kie/workbench/common/stunner/kogito/client/resources/i18n/KogitoClientConstants.properties
@@ -13,15 +13,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-org.kie.workbench.common.stunner.submarine.client.editor.DownloadDiagram=Download diagram
-org.kie.workbench.common.stunner.submarine.client.editor.ConfirmAction=Confirm action
-org.kie.workbench.common.stunner.submarine.client.editor.OnErrorConfirmUndoLastAction=An error happened [{0}]. Do you want to undo the last action?
-org.kie.workbench.common.stunner.submarine.client.editor.DiagramSaveSuccessful=Diagram saved successfully
-org.kie.workbench.common.stunner.submarine.client.editor.DiagramEditorDefaultTitle=Project Diagram Editor
-org.kie.workbench.common.stunner.submarine.client.editor.DiagramParsingError=An error occurred parsing the diagram. There might be nodes not yet supported by the editor or the XML content can contain errors. You can try to repair it manually. {0}
-org.kie.workbench.common.stunner.submarine.client.editor.Documentation=Documentation
-org.kie.workbench.common.stunner.submarine.client.editor.Print=Print
+org.kie.workbench.common.stunner.kogito.client.editor.DownloadDiagram=Download diagram
+org.kie.workbench.common.stunner.kogito.client.editor.ConfirmAction=Confirm action
+org.kie.workbench.common.stunner.kogito.client.editor.OnErrorConfirmUndoLastAction=An error happened [{0}]. Do you want to undo the last action?
+org.kie.workbench.common.stunner.kogito.client.editor.DiagramSaveSuccessful=Diagram saved successfully
+org.kie.workbench.common.stunner.kogito.client.editor.DiagramEditorDefaultTitle=Project Diagram Editor
+org.kie.workbench.common.stunner.kogito.client.editor.DiagramParsingError=An error occurred parsing the diagram. There might be nodes not yet supported by the editor or the XML content can contain errors. You can try to repair it manually. {0}
+org.kie.workbench.common.stunner.kogito.client.editor.Documentation=Documentation
+org.kie.workbench.common.stunner.kogito.client.editor.Print=Print
 
-SubmarineClientDiagramService.fileAlreadyExists0=File '{0}' already exists
+KogitoClientDiagramService.fileAlreadyExists0=File '{0}' already exists
 DiagramEditorPropertiesDock.title=Properties
 DiagramEditorPreviewAndExplorerDock.title=Explorer
