--- a/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants.properties
+++ b/kie-wb-common-services/kie-wb-common-verifier/kie-wb-common-verifier-reporting-client/src/main/java/org/kie/workbench/common/services/verifier/reporting/client/resources/i18n/AnalysisConstants.properties
@@ -22,7 +22,7 @@ SubsumptantRows=Subsumptant rows
 DeficientRow=Deficient row.
 ValueForFactFieldIsSetTwice=Value for {0}.{1} is set twice.
 ValueForAnActionIsSetTwice=Value for an action is set twice.
-RedundantConditionsNote1P1=Conditions for field {0}.{1} are redundant
+RedundantConditionsNote1P1=Conditions for field {0} are redundant
 AffectedRows=Affected rows
 WhenARuleHasNoActionItDoesFireButSinceTheActionSideIsEmptyNothingHappens=When a rule has no action it does fire, but since the action side is empty nothing happens.
 ItIsPossibleThatTheActionsWereLeftOutByAccidentInThisCasePleaseAddThemOtherwiseTheRuleCanNeRemoved=It is possible that the actions were left out by accident. In this case please add them. Otherwise the rule can be removed.
@@ -37,9 +37,9 @@ Salary=Salary
 Savings=Savings
 ApproveLoan=Approve loan
 DeficientRowsP2=Since the deficient rule can fire at the same time as an another rule, it is impossible to know which actions end up activating last. This causes the rule set to be inconsistent. To fix this, please either remove the deficient rule or make the conditions more strict.
-ImpossibleMatchNote1P1=The impossible match is on row {0} for field {1} of pattern {2}.
+ImpossibleMatchNote1P1=The impossible match is on row {0} for {1}.
 ImpossibleMatchNote1P2=Conflicting conditions are {0} and {1}.
-ImpossibleMatchP1=A rule that has an impossible match between conditions never activates. Please fix the conditions for {0}.
+ImpossibleMatchP1=A rule that has an impossible match between conditions never activates. Please fix the conditions.
 MissingConditionP1=When a rule has no conditions the actions are always executed. Please add conditions if this is not what was intended.
 MultipleValuesP1=Rule has multiple actions. Either the rule is setting a field to a value or it is running the same function twice.
 MultipleValuesNote1P1=Actions that raised this issue are {0} and {1}
