RHPAM-2317 - Users cannot find the properties menu unless it's pointed out to them
This adds the possibility of having different labels and tooltips for
the docks which was not supported.

--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
@@ -40,7 +40,8 @@ Task_Reports=Task Reports
 Content_Management=Page Authoring
 Group=Group
 DocksProjectExplorerTitle=Project Explorer
-DocksStunnerPropertiesTitle=Diagram properties
+DocksStunnerPropertiesTitle=Properties
+DocksStunnerPropertiesTooltip=Open Properties Panel
 DocksStunnerExplorerTitle=Explore diagram
 WorkbenchRootNodeName=Workbench
 DataModelerEditSources=Edit Source Code
