--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/WorkbenchConstants.properties
@@ -32,8 +32,8 @@ GenericErrorPopup.SystemErrorDetailsInLog=Details have been sent to the system l
 GenericErrorPopup.ErrorDetails=Error details
 GenericErrorPopup.ErrorId=ID: {0}
 GenericErrorPopup.DoNotShowAgainMsg=Don't show this message again for
-GenericErrorPopup.TimeSelectionOneHour=one hour
-GenericErrorPopup.TimeSelectionTwoHours=two hours
+GenericErrorPopup.TimeSelectionOneHour=1 hour
+GenericErrorPopup.TimeSelectionTwoHours=2 hours
 GenericErrorPopup.TimeSelectionThirtyMinutes=30 minutes
 GenericErrorPopup.TimeSelectionTenMinutes=10 minutes
 GenericErrorPopup.TimeSelectionTooltip=Unresolved errors might persist.
