--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -133,6 +133,7 @@ ReferencedDataTypeWarningMessage.StrongMessage=All Data Types with the "{0}" typ
 ReferencedDataTypeWarningMessage.RegularMessage=Are you sure you want to remove this Data Type?
 DataTypeNameIsDefaultTypeMessage.StrongMessage=The Data Type name cannot be a default type.
 DataTypeNameIsDefaultTypeMessage.RegularMessage=Use a different Data Type name.
+DataTypeSuccessfullyImportedMessage.RegularMessage=The Data Object (java class) was successfully imported and converted to DMN data type.
 FlashMessagesView.Ok=OK
 FlashMessagesView.Cancel=Cancel
 DataTypeListItemView.Constraints=Constraints: {0}
