JBPM-8738 - Stunner - There is no validation of datatype in Name Imports
This adds a new regex expression check in the custom class type fields.

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-api/src/main/resources/org/kie/workbench/common/stunner/bpmn/resources/i18n/StunnerBPMNConstants.properties
@@ -686,3 +686,16 @@ org.kie.workbench.common.stunner.bpmn.definition.property.event.BaseStartEventEx
 # Combobox Widget
 #########################
 combobox.edit=Edit
+#######################
+# ImportsEditor
+#######################
+ImportsPopup.title=Imports...
+ImportsPopup.ok=OK
+ImportsPopup.cancel=Cancel
+WSDLImportsEditorWidget.wsdlImports=WSDL Imports
+WSDLImportsEditorWidget.add=Add
+WSDLImportsEditorWidget.location=Location
+WSDLImportsEditorWidget.namespace=Namespace
+DefaultImportsEditorWidget.defaultImports=Default Imports
+DefaultImportsEditorWidget.add=Add
+DefaultImportsEditorWidget.className=Class Name
