--- a/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieEditorConstants_fr.properties
+++ b/kie-wb-common-widgets/kie-wb-metadata-widget/src/main/resources/org/kie/workbench/common/widgets/metadata/client/resources/i18n/KieEditorConstants_fr.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2012 Red Hat, Inc. and/or its affiliates.
+# Copyright 2017 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,9 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-MetaFileEditor=Éditeur de métafichier [ {0} ]
-TextEditor=Éditeur de texte [ {0} ]
-NewFileDescription=Importer l’actif
-Options=Options
-Uploading=Envoi…
+
+KieEditor.NotAllowedSaving=Vous n’êtes pas autorisé à enregistrer ce fichier.
+KieEditor.UnexpectedErrorWhileSaving=Une erreur inattendue s’est produite lors de la tentative d’enregistrement du fichier.
 
