--- a/kie-wb-common-forms/kie-wb-common-forms-commons/kie-wb-common-forms-common-rendering/kie-wb-common-forms-common-rendering-client/src/main/resources/org/kie/workbench/common/forms/common/rendering/client/resources/i18n/FormWidgetsConstants_fr.properties
+++ b/kie-wb-common-forms/kie-wb-common-forms-commons/kie-wb-common-forms-common-rendering/kie-wb-common-forms-common-rendering-client/src/main/resources/org/kie/workbench/common/forms/common/rendering/client/resources/i18n/FormWidgetsConstants_fr.properties
@@ -1,5 +1,5 @@
 #
-# Copyright 2012 Red Hat, Inc. and/or its affiliates.
+# Copyright 2016 Red Hat, Inc. and/or its affiliates.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -13,9 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-MetaFileEditor=Éditeur de métafichier [ {0} ]
-TextEditor=Éditeur de texte [ {0} ]
-NewFileDescription=Importer l’actif
-Options=Options
-Uploading=Envoi…
+
+PictureWidgetViewImpl.newPicture=Nouvelle image
+PictureWidgetViewImpl.takePicture=Prendre une photo
 
