--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -18,7 +18,7 @@ Add=Add
 businessProcess=Business Process
 businessProcessResourceTypeDescription=Business Processes
 Cancel=Cancel
-Constant=Constant
+Expression=Expression
 Custom=Custom
 Data_Type=Data Type
 Data_Input=data input
@@ -31,7 +31,8 @@ Data_Output_and_Assignment=Data Output and Assignment
 Data_Outputs_and_Assignments=Data Outputs and Assignments
 Data_IO=Data I/O
 Edit=Edit
-Enter_constant=Enter constant
+Enter_expression=Enter expression
+Only_expressions_allowed_for_output=Only expressions in format #{expression} allowed for data output
 Enter_type=Enter type
 Error_retrieving_datatypes=Error retrieving datatypes
 Invalid_character_in_name=Invalid character in name
