--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -42,7 +42,9 @@ No_Data_Output=no data output
 Only_single_entry_allowed=Only single entry allowed
 Ok=OK
 Source=Source
+assignment_source_help=The input variable source can be a variable, constant or expression.
 Target=Target
+assignment_target_help=The output variable target can be a variable or expression.
 This_input_should_be_entered_as_a_property_for_the_task=This Input should be entered as a property for the task
 Removed_invalid_characters_from_name=Removed invalid characters from name
 A_Data_Input_with_this_name_already_exists=A Data Input with this name already exists
