--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -32,7 +32,7 @@ Data_Outputs_and_Assignments=Data Outputs and Assignments
 Data_IO=Data I/O
 Edit=Edit
 Enter_expression=Enter expression
-Only_expressions_allowed_for_output=Only expressions in format #{expression} allowed for data output
+Only_expressions_allowed_for_output=Constant is not allowed for the Data Output
 Enter_type=Enter type
 Error_retrieving_datatypes=Error retrieving datatypes
 Invalid_character_in_name=Invalid character in name
