Updates following peer review.

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -55,6 +55,7 @@ ListEditor.HeaderRows=Rows
 ListEditor.InsertRowAbove=Insert above
 ListEditor.InsertRowBelow=Insert below
 ListEditor.DeleteRow=Delete
+ListEditor.EditExpression=Edit List
 FunctionEditor.FEEL=FEEL
 FunctionEditor.JAVA=JAVA
 FunctionEditor.PMML=PMML
