DROOLS-5045: [DMN Designer] Marshaller does not support DMN1.2 DecisionTable RuleAnnotation

--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
@@ -141,3 +141,4 @@ BusinessKnowledgeModel.DomainObjectName=Business Knowledge Model
 InputClause.DomainObjectName=Input Clause
 OutputClause.DomainObjectName=Output Clause
 DecisionService.DomainObjectName=Decision Service
+RuleAnnotationClause.DomainObjectName=Rule Annotation Clause
