--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -65,6 +65,11 @@ FunctionEditor.EditParameters=Edit parameters
 FunctionEditor.EditParametersTitle=Edit Parameters
 FunctionEditor.SelectFunctionKind=Select Function Kind
 ParametersPopoverViewImpl.addParameter=Add parameter
+DecisionTableEditor.InsertRuleAnnotationClauseLeft=Insert left
+DecisionTableEditor.InsertRuleAnnotationClauseRight=Insert right
+DecisionTableEditor.DeleteRuleAnnotationClause=Delete
+DecisionTableEditor.RuleAnnotationClauseHeader=Rule Annotation
+DecisionTableEditor.SelectRuleAnnotationName=Rule Annotation Name
 DecisionTableEditor.DescriptionColumnHeader=Description
 DecisionTableEditor.InputClauseHeader=Input clause
 DecisionTableEditor.InsertInputClauseLeft=Insert left
@@ -120,6 +125,7 @@ DataTypeListView.ReadOnlyMessage2=You can edit them by opening the original file
 DataTypeListView.ImportDataObject=Import Data Object
 NameAndDataTypePopover.NameLabel=Name
 NameAndDataTypePopover.DataTypeLabel=Data Type
+ValuePopover.ValueLabel=Value
 DataTypeNameIsBlankErrorMessage.StrongMessage=The Data Type name cannot be blank.
 DataTypeNameIsBlankErrorMessage.RegularMessage=Enter a Data Type name.
 DataTypeNameIsInvalidErrorMessage.StrongMessage=The Data Type name must start with a letter, ?, or _ and cannot start with a language keyword, such as and, true, or every.
