--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -90,6 +90,7 @@ DecisionTableEditor.EditInputClause=Edit Input Clause
 DecisionTableEditor.EditOutputClause=Edit Output Clause
 DecisionTableEditor.HitPolicyLabel=Hit Policy
 DecisionTableEditor.BuiltinAggregatorLabel=Builtin Aggregator
+DecisionTableEditor.EnterAnnotation=Enter Text
 DecisionTableEditor.InputClauseColumnHeaderMetaData.ValueLabel=Expression
 UndefinedExpressionEditor.SelectorTitle=Select logic type
 UndefinedExpressionEditor.SelectExpression=Select expression
