--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
@@ -30,7 +30,7 @@ MarshallingMessage.convertedElement=Element {0} of type {1} was converted to {2}
 MarshallingMessage.elementFailure=Failure on element {0} of type {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Data Object Exists with Same Name and Different Type
 MarshallingMessage.dataObjectWithName=Data Object with Name
-MarshallingMessage.dataObjectWithIllegalCharacters=contains Illegal Chars ([space], #, :, "), will replace with (-)
+MarshallingMessage.dataObjectWithIllegalCharacters=contains Illegal Chars ([space], #, :, [quotes]), will replace with (-)
 MarshallingMessage.dataObjectWithInvalidName=Data Object with Invalid Name Exists
 
 
