JBPM-7919 : Stunner - [BPMN] Support for Data Object and Association Fixed Additional Issues

--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
@@ -29,8 +29,8 @@ MarshallingMessage.childLaneSetConverted=Child Lane Set {0} was converted to Lan
 MarshallingMessage.convertedElement=Element {0} of type {1} was converted to {2}
 MarshallingMessage.elementFailure=Failure on element {0} of type {1}
 MarshallingMessage.dataObjectsSameNameDifferentType=Data Object Exists with Same Name and Different Type
-MarshallingMessage.dataObjectWithName=Data Object with Name
-MarshallingMessage.dataObjectWithIllegalCharacters=contains Illegal Chars ([space], #, :, [quotes]), will replace with (-)
+MarshallingMessage.dataObjectWithName=Data Object-Name
+MarshallingMessage.dataObjectWithIllegalCharacters=contains Illegal Chars ([space], #, :, [quotes]), will be replaced with (-)
 MarshallingMessage.dataObjectWithInvalidName=Data Object with Invalid Name Exists
 
 
