--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -60,7 +60,7 @@ AssignmentNameAlreadyInUseAsMultipleInstanceInputOutputVariable=Assignment name:
 Imports=Imports
 No_Imports=No imports
 No_Data_Type_Import=No data type imports
-Data_Type_Import=1 data type import 
+Data_Type_Import=1 data type import
 Data_Type_Imports=data type imports
 Data_Type_Imports_Title=Data Type Imports
 No_WSDL_Import=no WSDL import
@@ -68,6 +68,16 @@ WSDL_Import=1 WSDL import
 WSDL_Imports=WSDL imports
 WSDL_Imports_Title=WSDL Imports
 Duplicate_Import=An import with the same location ({0}) and namespace ({1}) already exists.
-Location=Location 
+Location=Location
 Namespace=Namespace
 ClassName=Class Name
+# Notifications
+replyToOptional=Reply to (optional)
+replyToMessage=An optional user or group that should receive replies to the notification.
+message=Message
+toUsers=To: user(s)
+toGroups=To: group(s)
+toEmails=To: email(s)
+subjectPlaceholder=Enter the subject here.
+emailsPlaceholder=Enter emails separated by comma.
+bodyPlaceholder=Enter the body of your message here.
