--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -71,7 +71,9 @@ Duplicate_Import=An import with the same location ({0}) and namespace ({1}) alre
 Location=Location
 Namespace=Namespace
 ClassName=Class Name
+####################
 # Notifications
+####################
 replyToOptional=Reply to (optional)
 replyToMessage=An optional user or group that should receive replies to the notification.
 message=Message
@@ -81,3 +83,17 @@ toEmails=To: email(s)
 subjectPlaceholder=Enter the subject here.
 emailsPlaceholder=Enter emails separated by comma.
 bodyPlaceholder=Enter the body of your message here.
+taskStateType=Task state type
+notCompleted=Not completed (In progress)
+notStarted=Not started (Ready or reserved)
+taskExpirationDefinition=Task expiration definition
+notificationPopover=This time definition determines when notification will occur.
+notifyLabel=Notify
+notifyAfter=Notify after task expiration
+notificationRepeat=Notification repeat
+notifyEvery=Notify every
+until=Until
+expressionTextArea=Example of basic expression notation for an interval: P2y10M14dT20h13m
+taskStateChangesLabel=Task state changes
+repeatCountReachesLabel=Repeat count reaches
+syntaxRequirement=For syntax requirements for ISO 8601 expressions, see https://www.iso.org/
