--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -97,3 +97,4 @@ expressionTextArea=Example of basic expression notation for an interval: P2y10M1
 taskStateChangesLabel=Task state changes
 repeatCountReachesLabel=Repeat count reaches
 syntaxRequirement=For syntax requirements for ISO 8601 expressions, see https://www.iso.org/
+incorrectEmail=One of emails has invalid value:
