BAPL-678: BPMN Editor - Syntax Highlighting

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -70,6 +70,7 @@ Duplicate_Import=An import with the same location ({0}) and namespace ({1}) alre
 Location=Location
 Namespace=Namespace
 ClassName=Class Name
+Language=Language
 ####################
 # Notifications
 ####################
