KOGITO-2668: [DMN Designer] Multiple DRDs support - Graph - When a DRD is focused, the name must appear above the canvas

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -292,3 +292,5 @@ DRDActions.ContextMenu.Title=DRD Actions
 DRDActions.ContextMenu.Actions.Create=Create
 DRDActions.ContextMenu.Actions.AddTo=Add to
 DRDActions.ContextMenu.Actions.Remove=Remove
+DRDNameChangerView.ReturnToDRGMessage=View DRG
+DRDNameChangerView.DRDDescriptionMessage=(Decision Requirements Diagram)
