JBPM-9282 Add wait spinner after user confirms warning alert in adding deployment unit

--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants.properties
@@ -151,3 +151,4 @@ NewContainer.GAVNotExist=GAV '{0}' not found in the Maven repository.
 NewContainer.GAVNotExist.Save=GAV '{0}' not found in the Maven repository. Are you sure you want to deploy it? 
 NewContainer.Save=Ok
 NewContainer.SaveContainerSpec=Save Container Spec
+NewContainer.Deploying={0} is deploying
