--- a/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants.properties
+++ b/kie-wb-common-screens/kie-wb-common-server-ui/kie-wb-common-server-ui-client/src/main/resources/org/kie/workbench/common/screens/server/management/client/resources/i18n/Constants.properties
@@ -153,3 +153,4 @@ NewContainer.Save=Ok
 NewContainer.SaveContainerSpec=Save Container Spec
 NewContainer.Deploying={0} is deploying
 NewContainer.FailedContainer=The Container failed on kie server.
+CanNot_Stop_Container=It is not possible to stop the container due to running process instance.
