--- a/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-client/kie-wb-common-stunner-widgets/src/main/resources/org/kie/workbench/common/stunner/client/widgets/resources/i18n/StunnerWidgetsConstants.properties
@@ -1,7 +1,7 @@
 ConfirmationDialogImplView.Yes=Yes
 ConfirmationDialogImplView.No=No
 
-DeleteNodeConfirmationDialogImpl.ConfirmationDescription=All {0} nodes will be removed from all decision requirements diagrams (DRDs).
+DeleteNodeConfirmationDialogImpl.ConfirmationDescription=All {0} nodes will be removed from all diagrams.
 DeleteNodeConfirmationDialogImpl.Question=Are you sure you want to continue?
 DeleteNodeConfirmationDialogImpl.Title=Are you sure you want to remove this?
 
