KOGITO-3885: [DMN Designer] Show parameters list for Decision Services

--- a/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-api/src/main/resources/org/kie/workbench/common/dmn/api/resources/i18n/DMNAPIConstants.properties
@@ -113,6 +113,7 @@ org.kie.workbench.common.dmn.api.property.dmn.TextFormat.label=Text format
 org.kie.workbench.common.dmn.api.property.dmn.TextFormat.description=Text MIME type
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.label=Documentation Links
 org.kie.workbench.common.dmn.api.property.dmn.DocumentationLinksHolder.description=External documentation items for the shape
+org.kie.workbench.common.dmn.api.property.dmn.DecisionServiceParametersListSet.label=Decision Service details
 
 #######################
 # Font property
