--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -294,3 +294,7 @@ DRDActions.ContextMenu.Actions.AddTo=Add to
 DRDActions.ContextMenu.Actions.Remove=Remove
 DRDNameChangerView.ReturnToDRGMessage=View DRG
 DRDNameChangerView.DRDDescriptionMessage=(Decision Requirements Diagram)
+DecisionServiceParameters.Inputs=Input Data
+DecisionServiceParameters.Outputs=Output Decisions
+DecisionServiceParameters.EncapsulatedDecisions=Encapsulated Decisions
+ParameterGroup.None=None
