RHPAM-3218 - List of task status for Notification window have incorrect labels

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/client/forms/fields/i18n/StunnerFormsClientFieldsConstants.properties
@@ -84,8 +84,8 @@ subjectPlaceholder=Enter the subject here.
 emailsPlaceholder=Enter emails separated by comma.
 bodyPlaceholder=Enter the body of your message here.
 taskStateType=Task state type
-notCompleted=Not completed (In progress)
-notStarted=Not started (Ready or reserved)
+notCompleted=Not completed (Created, ready, reserved, in progress or suspended)
+notStarted=Not started (Created, ready or reserved)
 taskExpirationDefinition=Task expiration definition
 notificationPopover=This time definition determines when notification will occur.
 notifyLabel=Notify
