AF-2692 : Add a security permission to show project toolbar, Metrics tab and change request tab

--- a/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
+++ b/kie-wb-common-screens/kie-wb-common-workbench/kie-wb-common-workbench-client/src/main/resources/org/kie/workbench/common/workbench/client/resources/i18n/DefaultWorkbenchConstants.properties
@@ -89,6 +89,12 @@ CustomTasksAdministration=Custom Tasks Administration
 DataTransfer=Dashbuilder Data Transfer
 AccessDataTransfer=Access to Dashbuilder Data Transfer
 AccessDataTransferHelp=Permission to import and export dashbuilder data (datasets, perspectives and navigation).
+ShowMetricsTab=Show project metrics tab
+ShowMetricsTabHelp=Permission to show the project metrics tab
+ShowChangeRequestTab=Show project change request tab
+ShowChangeRequestTabHelp=Permission to show or hide the project change request tab
+ShowProjectToolbar=Show project toolbar
+ShowProjectToolbarHelp=Permission to show the project toolbar which contains Test, Build and Deploy buttons
 DisconnectedFromServer=Disconnected from server
 CouldNotConnectToServer=Could not connect to server. This very likely means a network problem. Do you want to reload the application?
 Archetypes=Archetypes
