JBPM-9597 - [BPMN] Open subprocesses in a new editor (BC only)

--- a/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants.properties
+++ b/kie-wb-common-stunner/kie-wb-common-stunner-sets/kie-wb-common-stunner-bpmn/kie-wb-common-stunner-bpmn-project-client/src/main/resources/org/kie/workbench/common/stunner/bpmn/project/client/resources/i18n/BPMNClientConstants.properties
@@ -16,3 +16,6 @@ editor.actions.migrateErrorProcessAlreadyExists=A jBPM designer process already 
 editor.actions.migrateErrorGeneric=An error was produced during migration
 
 editor.error.generateSvgFileError=An error was produced during diagram svg file generation
+editor.error.subprocessNotFound=Subprocess {0} not found.
+editor.error.subprocessNotSpecified=Subprocess ID is not specified.
+editor.toolbox.openSubprocessToolboxAction=Open Sub-process
