KOGITO-4179: [DMN Designer] Data Types - Add popover for showing data types fields in the data types tab

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -298,3 +298,8 @@ DecisionServiceParameters.Inputs=Input Data
 DecisionServiceParameters.Outputs=Output Decisions
 DecisionServiceParameters.EncapsulatedDecisions=Encapsulated Decisions
 ParameterGroup.None=None
+DataTypeSelectView.Structure=Structure
+StructureTypesTooltipView.Description="{0}" is a structured data type with {1} fields.
+StructureTypesTooltipView.DescriptionEmptyState="{0}" is a structured data type without fields.
+StructureTypesTooltipView.ViewOrEditDataType=View or edit this data type
+StructureTypesTooltipView.Structure=Structure
