KOGITO-4179: [DMN Designer] Data Types - Add popover for showing data types fields in the data types tab (#3621)

--- a/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
+++ b/kie-wb-common-dmn/kie-wb-common-dmn-client/src/main/resources/org/kie/workbench/common/dmn/client/resources/i18n/DMNClientConstants.properties
@@ -298,3 +298,9 @@ DecisionServiceParameters.Inputs=Input Data
 DecisionServiceParameters.Outputs=Output Decisions
 DecisionServiceParameters.EncapsulatedDecisions=Encapsulated Decisions
 ParameterGroup.None=None
+DataTypeSelectView.Structure=Structure
+StructureTypesTooltipView.DescriptionStructured="{0}" is a structured data type with {1} fields.
+StructureTypesTooltipView.DescriptionCustom="{0}" is a custom data type.
+StructureTypesTooltipView.DescriptionIncluded="{0}" is an external data type from an included model.
+StructureTypesTooltipView.ViewDataType=View this data type
+StructureTypesTooltipView.Structure=Structure
